Update swagger with docs for all Domain objects and added ACCEPT and CONTENT TYPE header parameters
